--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     container_name: task_tracker_web_api
     depends_on:
       - postgres
+    environment:
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=task-tracker;Username=${DB_USER};Password=${DB_PASSWORD}
   postgres:
     container_name: postgres
     image: postgres:latest
